Component updater must enforce that the brand length is 4.

BUG=601879

Review URL: https://codereview.chromium.org/1876573002

Cr-Commit-Position: refs/heads/master@{#386266}

Former-commit-id: af402ee655981ab3690c6cc00de0a8f3e5071b31